<resources>
    <string name="app_name">Rem Control</string>


    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="about_project_0">Ресурси:</string>
    <string name="about_project_1">Створено на базі відкритого API сервісу "1551" КБУ «Контактний центр міста Києва»</string>
    <string name="about_project_2">Офіційний сайт: </string>
    <string name="about_project_href_1551"><a href="http://www.1551.gov.ua">www.1551.gov.ua</a></string>

    <string name="about_project_3">Розробники:</string>
    <string name="about_project_4">Бугаєнко Юрій Михайлович</string>
    <string name="about_project_5">Похилінський Сергій Анатолійович</string>
    <string name="about_project_6">Київ 2015</string>

    <string name="create_appeal">Створити звернення</string>
    <string name="postponed">Відкладені</string>
    <string name="history">Історія звернень</string>

    <string name="about_project">Про проект</string>
    <string name="log_out">Вийти з системи</string>
    <string name="help">Допомога</string>

    <string name="login">Увійти</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="sign_in">Увійти</string>
    <string name="sign_out">Вийти</string>
    <string name="sign_up">Реєстрація</string>

    <string name="prompt_email">Електронна пошта</string>
    <string name="prompt_password">Пароль</string>


    <string name="error_invalid_email">Некоректна електронна пошта</string>
    <string name="error_invalid_password">Пароль має бути більше 4х символів</string>
    <string name="error_incorrect_password">Неправильний пароль</string>
    <string name="error_field_required">Поле обов\'язкве до заповнення</string>


    <string name="no_internet_connection_error">Відсутнє з\'єднання з інтернетом!</string>

    <string name="need_authorization_error">Будь ласка, авторизуйтесь!</string>
    <string name="title_activity_appeal_sent_history">AppealSentHistoryActivity</string>
    <string name="title_activity_show_sent_appeal">ShowSentAppealActivity</string>

    <string name="district">Район:</string>
    <string name="address">Адреса:</string>
    <string name="status">Статус:</string>
    <string name="text">Ваш коментар:</string>
    <string name="title_activity_postponed_appeals_list">PostponedAppealsListActivity</string>
    <string name="title_activity_about_project">AboutProject</string>

    <string-array
        name="array_buttons_set_photos">
        <item>Зробити фото</item>
        <item>Додати з галереї</item>
    </string-array>


</resources>
