<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="denver.remcontrol.activitys.ShowSentAppealActivity">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/district"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textViewDistrictInActivityShow"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/address"
        android:id="@+id/textView3"
        android:layout_below="@+id/textViewDistrictInActivityShow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textViewAddressInActivityShow"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <LinearLayout
        android:id="@+id/linearLayoutStatusInActivityShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAddressInActivityShow"
        android:background="@color/md_deep_purple_50"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status"
            android:id="@+id/textView6"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/textViewStatusInActivityShow"
             />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text"
        android:id="@+id/textView"
        android:layout_below="@+id/linearLayoutStatusInActivityShow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/textViewTextInActivityShow"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Показати фото"
                android:onClick="onClickButtonAddPhoto"
                android:id="@+id/buttonShowPhotos" />

            <ProgressBar android:id="@+id/photos_download_progress" style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linearLayoutPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                >
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"

                android:id="@+id/imageViewPhotoSent1"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/imageViewPhotoSent2"
                />


            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/imageViewPhotoSent3"

                />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/imageViewPhotoSent4"

                />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/imageViewPhotoSent5"

                />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewTextInActivityShow"
                android:background="@color/md_deep_purple_100"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Коментар контролюючого:"
                    android:visibility="visible"
                    android:id="@+id/comment"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/commentDate"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/textOfComment"
                    android:layout_below="@+id/commentDate"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
